Fixes #5 Buildnumbrt now visible

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,5 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~bootswatch/dist/Cosmo/bootswatch";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+body { padding-bottom: 50px; }
